# andromeda

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  gitlab-ci.yml  rustfmt.toml  sonar-project.properties
crates/api/: Cargo.toml
crates/api/src/: address.rs  bitcoin_address.rs  block.rs  contacts.rs  discovery_content.rs  email_integration.rs  env.rs  error.rs  event.rs  exchange_rate.rs  invite.rs  lib.rs  network.rs  payment_gateway.rs  price_graph.rs  proton_address.rs  proton_email_address.rs  proton_quark.rs  proton_settings.rs  proton_users.rs  settings.rs  transaction.rs  two_factor_auth.rs  unleash.rs  user_settings.rs  utils.rs  utils_test.rs  wallet.rs  wallet_ext.rs
crates/api/src/core/: client.rs  mod.rs  proton_response_ext.rs  request.rs  wallet_auth_store.rs
crates/api/src/tests/: mod.rs  proton_settings_mock.rs  proton_users_mock.rs  utils.rs  wallet_mock.rs
crates/api/src/tests/mocks/: create_wallet_1000_body.json  fetch_toggles_1000_body.json  get_all_public_keys_1000_body.json  get_block_by_hash.raw  get_block_hash_1000_body.json  get_block_status_1000_body.json  get_blocks_1000_body.json  get_blocks_header_by_hash_1000_body.json  get_events_1000_body.json  get_events_1000_body_2.json  get_mempool_info_1000_body.json  get_proton_email_addresses_1000_body.json  get_scripthash_transactions_1000_body.json  get_transaction.raw  get_transaction_info_1000_body.json  get_transaction_merkle_proof_1000_body.json  get_wallet_accounts_1000_body.json  get_wallet_transactions_1000_body.json  get_wallet_transactions_to_hash_1000_body.json  get_wallets_1000_body.json  two_factor_auth_disable_1000_body.json  two_factor_auth_enable_1000_body.json  update_wallet_accounts_order_1000_body.json
crates/bitcoin/: Cargo.toml
crates/bitcoin/src/: account.rs  account_sweeper.rs  account_syncer.rs  account_trait.rs  address.rs  bdk_wallet_ext.rs  bdk_wallet_secp_ext.rs  bitcoin.rs  bitcoin_signed_message.rs  blockchain.rs  blockchain_client.rs  chain.rs  constants.rs  error.rs  lib.rs  message_signer.rs  mnemonic.rs  paper_account.rs  payment_link.rs  psbt.rs  storage.rs  transaction_builder.rs  transactions.rs  utils.rs  wallet.rs  wallet_ext.rs
crates/bitcoin/src/tests/: test_utils.rs  utils.rs
crates/bitcoin/src/tests/mocks/: get_addresses_body_1.json  get_block_hash_body.json  (+13 more)
crates/common/: Cargo.toml
crates/common/src/: async_trait.rs  error.rs  lib.rs  pdf_generator.rs  typst_wrapper.rs  utils.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  lib.rs  message.rs  message_signature.rs
crates/esplora/: Cargo.toml
crates/esplora/src/: api.rs  async.rs  async_ext.rs  error.rs  lib.rs
crates/features/: Cargo.toml
crates/features/src/: account_statement_generator.rs  error.rs  lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/src/api/: bitcoin_address.rs  email_integration.rs  env.rs  exchange_rate.rs  invite.rs  mod.rs  network.rs  payment_gateway.rs  price_graph.rs  settings.rs  wallet.rs
crates/wasm/src/bitcoin/: account.rs  account_sweeper.rs  account_syncer.rs  blockchain.rs  blockchain_client.rs  chain.rs  message_signer.rs  mnemonic.rs  mod.rs  paper_account.rs  payment_link.rs  psbt.rs  storage.rs  transaction_builder.rs  wallet.rs
crates/wasm/src/common/: error.rs  types.rs
crates/wasm/src/features/: account_statement_generator.rs  mod.rs
crates/wasm/src/utils/: panic_hook.rs
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
proton-wallet-common/: Cargo.toml
proton-wallet-common/src/: account.rs  address.rs  async_rw_lock.rs  bitcoin.rs  chain.rs  client.rs  descriptor.rs  error.rs  esplora.rs  hello.rs  keys.rs  lib.rs  mnemonic.rs  payment_link.rs  transaction.rs  transaction_builder.rs  transactions.rs  utils.rs  wallet.rs
proton-wallet-common/src/common/: async_rw_lock.rs  bitcoin.rs  chain.rs  error.rs  mnemonic.rs  mod.rs  utils.rs
proton-wallet-common/src/onchain/: account.rs  chain.rs  client.rs  mnemonic.rs  mod.rs  payment_link.rs  transaction_builder.rs  transactions.rs  utils.rs  wallet.rs
proton-wallet-common/tests/: address.rs  hello.rs  keys.rs  lib.rs
proton-wallet-mobile/: Cargo.toml  build.rs  uniffi.toml
proton-wallet-mobile/android/: gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
proton-wallet-mobile/android/lib/: build.gradle.kts
proton-wallet-mobile/iOS/PassRustCore/: Package.swift
proton-wallet-mobile/iOS/frameworks/RustFramework.xcframework/: Info.plist
proton-wallet-mobile/iOS/headers/: RustFrameworkFFI.h
proton-wallet-mobile/iOS/walletRustCore/: README.md
proton-wallet-mobile/src/: RustFramework.swift  RustFrameworkFFI.h  account.rs  account.udl  address.rs  address.udl  bdk.udl  common.udl  error.udl  hello.rs  hello.udl  keys.rs  keys.udl  lib.rs  mnemonic.udl  namespace.udl  transaction_builder.udl  wallet.udl
proton-wallet-mobile/src/types/: address_index.rs  address_index.udl  address_info.rs  address_info.udl  balance.udl  defined.udl  mod.rs
proton-wallet-web/: Cargo.toml
proton-wallet-web/src/: account.rs  address.rs  address_index.rs  balance.rs  chain.rs  client.rs  defined.rs  derivation_path.rs  descriptor.rs  error.rs  keys.rs  lib.rs  locktime.rs  mnemonic.rs  partially_signed_transaction.rs  payment_link.rs  psbt.rs  public_key.rs  secret_key.rs  storage.rs  transaction.rs  transaction_builder.rs  tx_builder.rs  wallet.rs
proton-wallet-web/src/common/: error.rs
proton-wallet-web/src/onchain/: account.rs  chain.rs  mnemonic.rs  payment_link.rs  psbt.rs  storage.rs  transaction_builder.rs  wallet.rs
proton-wallet-web/src/onchain/types/: address.rs  balance.rs  defined.rs  derivation_path.rs  locktime.rs  pagination.rs  transaction.rs  typescript_interfaces.rs  utxo.rs
proton-wallet-web/src/types/: address.rs  address_index.rs  address_info.rs  balance.rs  defined.rs  derivation_path.rs  locktime.rs  mod.rs  pagination.rs  partially_signed_transaction.rs  script.rs  transaction.rs  tx_builder.rs  typescript_interfaces.rs  udpate.rs  utxo.rs
proton-wallet-web/src/utils/: mod.rs  panic_hook.rs
(+32 files in other folders)
