[workspace]
resolver = "2"
members = [
  "crates/api",
  "crates/common",
  "crates/bitcoin",
  "crates/esplora",
  "crates/wasm",
  "examples/cli",
]
[profile.release]
opt-level = "s" # Tell `rustc` to optimize for small code size.

[workspace.dependencies]
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
serde_json = { version = "1.0.117" }
serde = { version = "1.0.144", features = ["derive"] }
async-std = { version = "1.10" }
bitcoin = { version = "=0.32.0", default-features = false, features = [
  "serde",
  "secp-recovery",
  "rand",
] }
bdk_wallet = { version = "=1.0.0-beta.5", default-features = false, features = [
  "std",
  "keys-bip39",
] }
bdk_esplora = { version = "=0.19.0", default-features = false, features = [
  "async-https-rustls",
] }
bdk_chain = { version = "0.20.0", default-features = false }
tokio = { version = "1.35", features = ["macros", "rt"] }
tokio-test = { version = "0.4.3" }
