[package]
name = "proton-wallet-common"
version = "0.1.0"
edition = "2021"

[dependencies] 
bdk = { version = "1.0.0-alpha.2", default-features = false, features = ["all-keys", "keys-bip39", "std"] }
bdk_esplora = { version = "0.4.0", default-features = false, features = ["async-https"] }
bdk_chain = { version = "=0.6.0", default-features = false, features = ["hashbrown"] }
miniscript = { version = "10.0.0", default-features = false }
serde-wasm-bindgen = { version = "0.6.1", optional = true }
serde = { version = "1.0.144", features = ["derive"] }
wasm-bindgen = { version = "0.2.88", features=["serde-serialize"], optional = true  }
uuid = {version = "1.6.1", features = ["v4", "fast-rng"] }
urlencoding = "2.1.3"
querystring = "1.1.0"
async-std = "1.10"
futures = "0.3.30"

#feature "async-interface", 
# Platform-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }


[features]
wasm = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen"]
