[package]
name = "proton-wallet-common"
version = "0.1.0"
edition = "2021"

[dependencies] 
serde = { version = "1.0.144", features = ["derive"] }
uuid = {version = "1.6.1", features = ["v4", "fast-rng"] }
urlencoding = "2.1.3"
querystring = "1.1.0"
async-std = "1.10"
futures = "0.3.30"
hashbrown = "0.11.2"

bitcoin = { version = "0.30.2", default-features = false, features = ["serde", "secp-recovery", "rand"] }
miniscript = { version = "10.0.0", default-features = false }

bdk = { version = "1.0.0-alpha.2", default-features = false, features = ["all-keys", "keys-bip39", "std"] }
bdk_esplora = { version = "0.4.0", default-features = false, features = ["async-https"] }
bdk_chain = { version = "=0.6.0", default-features = false, features = ["hashbrown"] }

lightning = { version = "0.0.119", default-features = false, features = ["max_level_trace", "grind_signatures", "no-std"] }
lightning-invoice = { version = "0.26.0", default-features = false, features = ["no-std", "serde"] }
lightning-rapid-gossip-sync = { version = "0.0.118", default-features = false, features = ["no-std"] }

[dev-dependencies]
actix-rt = "*"
mockers = "0.22.0"
mockall = "0.12.1"

#feature "async-interface", 
# Platform-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2.88", features=["serde-serialize"], optional = true  }
serde-wasm-bindgen = { version = "0.6.1", optional = true }


[features]
wasm = ["dep:serde-wasm-bindgen", "dep:wasm-bindgen"]
