[package]
name = "proton-wallet-mobile"
version = "0.1.0"
edition = "2021"

# Flags for cargo-release
[package.metadata.release]
pre-release-replacements = [
    # Yes, we are relying on the number of whitespaces
    {file="android/lib/build.gradle.kts", search="    version = .*", replace="    version = \"{{version}}\""}
]


[lib]
doctest = false
crate-type = ["cdylib", "staticlib"]
name = "proton_wallet_common"

[dependencies]
proton-wallet-common = { path = "../proton-wallet-common" }
uniffi = { version = "0.25.0" }

[build-dependencies]
uniffi = { version = "0.25.0", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "./bindgen.rs"
required-features = [ "uniffi/cli" ]
