[package]
name = "proton-wallet-mobile"
version = "0.1.0"
edition = "2021"

# Flags for cargo-release
[package.metadata.release]
pre-release-replacements = [
    # Yes, we are relying on the number of whitespaces
    {file="android/lib/build.gradle.kts", search="    version = .*", replace="    version = \"{{version}}\""}
]

[lib]
doctest = false
crate-type = ["cdylib", "staticlib"]
name = "proton_wallet_common"

[features]
default = ["uniffi/cli"]

[dependencies]
proton-wallet-common = { path = "../proton-wallet-common" }
uniffi = { version = "0.25.1" }

[target.armv7-linux-androideabi.dependencies]
openssl = { version = "0.10.60", features = ["vendored"] }

[dev-dependencies]
uniffi = { version = "0.25.1", features = ["bindgen-tests"] }
assert_matches = "1.5.0"

[build-dependencies]
uniffi = { version = "0.25.1", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "./bindgen.rs"
required-features = [ "uniffi/cli" ]

[profile.release-smaller]
inherits = "release"
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = "debuginfo" # Partially strip symbols from binary