[package]
name = "proton-wallet-web"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
proton-wallet-common = { path = "../proton-wallet-common", features = ["wasm"] }
#serde_json = "1.0.108"
serde = { version = "1.0.144", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"


console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.65"
wasm-bindgen = { version = "0.2.88", features=["serde-serialize"] }
wasm-bindgen-futures = "0.4.38"

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
[features]
default = ["console_error_panic_hook"]
