[package]
name = "andromeda-api"
version = "0.1.0"
edition = "2021"

[dependencies]
andromeda-common = { version = "0.1.0", path = "../common" }
muon = { version = "0.5.0", registry = "proton_internal" }
async-std = "1.10"
base64 = "0.21"
cfg-if = "1"

serde = { version = "1.0.144", features = ["derive"] }
serde_repr = "0.1.19"
serde_json = "1.0"
log = "0.4.19"
thiserror = { workspace = true }

bitcoin = { workspace = true }

[dev-dependencies]
wiremock = "0.6.0"
tokio = { features = ["macros", "rt"], version = "1.35" }
tokio-test = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = []
# Used to prefix endpoints with /api
local = []
# Used to be able to use a non-standard api (no atlas or prod)
allow-dangerous-env = ["muon/unsealed"]
test = ["allow-dangerous-env"]
# quark command. only available in atlas
quark = []
