[package]
name = "andromeda-api"
version = "0.1.0"
edition = "2021"

[dependencies]
andromeda-common = { version = "0.1.0", path = "../common" }
muon = { version = "0.11.0", registry = "proton_internal" }
base64 = "0.22.0"
cfg-if = "1"
log = "0.4.19"

async-std = { workspace = true }

serde_repr = "0.1.19"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

bitcoin = { workspace = true }

[dev-dependencies]
wiremock = "0.6.0"
tokio = { workspace = true }
tokio-test = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
# Used to be able to use a non-standard api (no atlas or prod)
allow-dangerous-env = ["muon/unsealed"]
test = ["allow-dangerous-env"]
# quark command. only available in atlas
quark = []
