[package]
name = "andromeda-bitcoin"
version = "0.1.0"
edition = "2021"

[dependencies]
andromeda-api = { version = "0.1.0", path = "../api" }
andromeda-common = { version = "0.1.0", path = "../common" }
andromeda-esplora = { version = "0.1.0", path = "../esplora" }

uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
urlencoding = "2.1.3"
querystring = "1.1.0"
futures = "0.3.30"
hashbrown = "0.9.1"
rand_core = "0.6.4"

bitcoin = { workspace = true }
miniscript = { version = "12.0.0", default-features = false }

bdk_wallet = { workspace = true }
bdk_chain = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }

async-std = { workspace = true }

serde = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
wasm-bindgen = { version = "0.2.88", features = [
  "serde-serialize",
], optional = true }
wasm-bindgen-futures = "0.4.39"

[dev-dependencies]
wiremock = "0.6.0"
tokio = { workspace = true }
tokio-test = { workspace = true }
bech32 = "0.11.0"


[features]
sqlite = ["bdk_wallet/rusqlite"]
default = ["andromeda-api/allow-dangerous-env"]
