[package]
name = "andromeda-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
thiserror = { workspace = true }

bitcoin = { workspace = true }
bdk_wallet = { workspace = true }

instant = { version = "0.1", features = ["wasm-bindgen"] }
