[package]
name = "andromeda-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

bitcoin = { workspace = true }

instant = { version = "0.1", features = ["wasm-bindgen"] }

chrono = { version = "0.4", features = ["wasmbind"] }

# typst essentials
typst = "0.13.1"
typst-kit = { version = "0.13.1", default-features = false, features = ["fonts"] }
typst-timing = "0.13.1"
typst-pdf = "0.13.1"

[dev-dependencies]
wiremock = "0.6.0"
tokio = { workspace = true }
tokio-test = { workspace = true }