[package]
name = "andromeda-esplora"
version = "0.1.0"
description = "Bitcoin Esplora API client library for Proton, based on BDK's esplora client."
edition = "2021"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }

andromeda-api = { version = "0.1.0", path = "../api" }
andromeda-common = { version = "0.1.0", path = "../common" }

async-trait = { version = "0.1.66" }
futures = { version = "0.3.26" }

serde = { version = "1.0", features = ["derive"] }
log = "^0.4"
bitcoin = { workspace = true, features = [
    "serde",
    "std",
], default-features = false }

bdk_chain = { version = "0.15.0", default-features = false }

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1.20.1", features = ["full"] }
anyhow = "1"
lazy_static = "1.4.0"
