[package]
name = "andromeda-esplora"
version = "0.1.0"
description = "Bitcoin Esplora API client library for Proton, based on BDK's esplora client."
edition = "2021"

[dependencies]
andromeda-api = { version = "0.1.0", path = "../api" }

thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { version = "0.3.26" }

serde = { workspace = true }
log = "^0.4"
bitcoin = { workspace = true, features = [
    "serde",
    "std",
], default-features = false }

bdk_chain = { workspace = true }
bdk_core = { version = "=0.4.1", default-features = false }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
lazy_static = "1.4.0"
