[package]
name = "proton-wallet-wasm"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false
crate-type = ["cdylib", "rlib"]

[dependencies]
proton-wallet-bitcoin = { path = "../bitcoin" }

serde = { version = "1.0.144", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
serde_json = "1.0.108"

wasm-bindgen = { version = "0.2.88", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3.65"
web-sys = { version = "0.3.65", features = ["console", "Storage"] }

console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.38"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
[features]
default = ["console_error_panic_hook"]
