[package]
name = "andromeda-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
andromeda-bitcoin = { path = "../../crates/bitcoin" }
andromeda-api = { path = "../../crates/api" }
andromeda-common = { version = "0.1.0", path = "../../crates/common" }
